@@ -1,4 +1,12 @@
-﻿zg 10.04.2015 01:25:50 +0200 - build 4339
+﻿zg 10.04.2015 13:29:09 +0200 - build 4340
+
+1. уточнение 4337: сбрасывалось выделение при редактировании.
+
+2. нажатие numlock, capslock, scrolllock снимало признак неизменённости в полях ввода.
+
+3. gcc warnings.
+
+zg 10.04.2015 01:25:50 +0200 - build 4339
 
 1. при ненулевом FarDialogItem.MaxLength некорректно инициализировался элемент диалога.
 
